Removing TLS from biased reference counting lookups + fixing some UB the earlier TLS removals introduced